# EpidBot-OpenMAIC

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  USE_CASES.md
scripts/: demo.py  test_pysus.py  test_pysus_quick.py  translate_classroom.py
src/: __init__.py  config.py  main.py
src/adapters/: __init__.py  epidbot_adapter.py  openmaic_adapter.py
src/generators/: __init__.py  requirement_builder.py
src/models/: __init__.py  schemas.py
src/utils/: __init__.py  data_fetcher.py  epidbot_response_parser.py
tests/: test_basic.py  test_epidbot.py
